[package]
name = "iio_ambient_brightness"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
byteorder = "1.5.0"
clap = { version = "4.5.6", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.4.4"
env_logger = "0.11.3"
industrial-io = { version = "0.5.2", default-features = false }
log = "0.4.21"
logind-zbus = "4.0.3"
mio = { version = "1.0.0", features = ["net", "os-poll"] }
ouroboros = "0.18.3"
retry = "2.0.0"
yata = { version = "0.7.0", default-features = false }
zbus = { version = "4.2.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
